# ecg-baseline

./: CMakeLists.txt  butter.cpp  butter.h  ecgdata.cpp  main.cpp  sgolay.cpp  sgolay.h  wavelet.cpp  wavelet.h
matlab/: ecg.m
matlab/fir/: fir.m  sosfilt1.m  sosfiltfilt.m
matlab/savitzky/: savitzkygolay.m
matlab/wavelets/: conv1.m  dwt1.m  idwt1.m  upsconv.m  wavelets.m
